# deckard

./: .gitignore  .pylintrc  README.md  config.archives.yml  config.example.yml  config.yml  pyproject.toml  qa.example.yml
chunkers/: CharacterTextSplitterChunker.py  StandardChunker.py  character_text_splitter.py
collectors/: DatabaseCollector.py  LibPagesCollector.py  WebPageCollector.py  main.py
collectors/data/: lib_urls.txt
contextbuilders/: ParentDocumentAssembler.py  SimpleContextAggregator.py
contextdatabases/: SQLite.py
core/: LLM.py  LLMQuery.py  QueryLogger.py  QueryLoggerJsonFile.py  RagBuilder.py  RagStack.py  ResponseProcessor.py  builders.py  classloader.py  config.py  logger.py  prompts.py  responses.py  time.py  utils.py
datatransformers/: StandardTransformer.py
deckard/chunkers/: __init__.py  character_text_splitter.py
deckard/collectors/: __init__.py  archives_history.py  database.py  lib_pages.py  mysql.py  webpages.py
deckard/collectors/data/: lib_additional.txt  lib_news.txt  lib_pages.txt  lib_urls.txt
deckard/context_builders/: __init__.py  parent_document_assembler.py  simple_aggregator.py
deckard/core/: __init__.py  builders.py  classloader.py  config.py  config_validator.py  defaults.py  json.py  jsoncore.py  logger.py  time.py  utils.py
deckard/databases/: __init__.py  context_database.py  lancedb.py  sqlite.py
deckard/encoders/: __init__.py  sentence_transformer_encoder.py
deckard/interfaces/: api.py  client.py  embeddingsearch.py  llmdirectquery.py  qabuild.py  rag.py  ragbuild.py  ragevaluate.py  ragquery.py  slackbot.py  test.py
deckard/interfaces/services/: __init__.py  qa_service.py
deckard/llm/: __init__.py  compound.py  llm.py  llm_query.py  malicious.py  prompts.py  qa_responder.py  response_processor.py  response_sources.py  response_summarizer.py  response_verifier.py  responses.py
deckard/qa/: __init__.py  qa_builder.py  qa_stack.py  qa_validator.py
deckard/query_loggers/: __init__.py  query_logger.py  query_logger_json_file.py
deckard/query_processors/: __init__.py  raw.py  standard.py
deckard/rag/: __init__.py  rag_builder.py  rag_stack.py
deckard/rag_evaluator/: __init__.py  config.yml  config_generator.py  evaluator.py  reporter.py  test_input.spintax
deckard/response/: api_response.py
deckard/response_processors/: __init__.py  llama3.py
deckard/sparse/: __init__.py  solr.py  sparse_search.py
deckard/sparse/data/: initSolr.sh
documentation/: CONFIGURATION_CONSIDERATIONS.md  CONTENT_CONSIDERATIONS.md  PROJECT_DESIGN_CONSIDERATIONS.md  RAG.md  RAG_INDEXING_STEPS.md  RAG_QUERY_STEPS.md  README.md  TECHNICAL_PREREQUISITE_GUIDANCE.md
encoders/: SentenceTransformerEncoder.py
interfaces/: api.py  embeddingsearch.py  llmdirectquery.py  ragquery.py  slackbot.py
processors/: main.py
queryprocessors/: RawQueryProcessor.py  StandardQueryProcessor.py
ragbuilders/: main.py
ragconfigurationtesters/: RagConfigGenerator.py  RagReporter.py  RagTester.py  evaluate.py  test_input.spintax
ragconfiurationtester/: RagReporter.py  RagTester.py  config.yml  evaluate.py  test_input.spintax
scoring/: RagConfigGenerator.py  RagReporter.py  RagTester.py  config.yml  evaluate.py  test_input.spintax
scripts/: reprocess.sh  slackbot.sh
vectordatabases/: LanceDB.py
