[tool.poetry]
name = "core"
version = "0.1.0"
description = ""
authors = ["UNB Libraries <libsystems@unb.ca>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
beautifulsoup4 = "4.12.3"
flask = "3.0.2"
html2text = "2020.1.16"
huggingface-hub = "0.20.3"
lancedb = "0.5.6"
langchain = "0.1.8"
langchain-community = "0.0.21"
llama-cpp-python = "0.2.47"
pandas = "2.2.0"
psutil = "5.9.8"
pyyaml = "6.0.1"
requests = "2.31.0"
sentence_transformers = "2.3.1"
slack-bolt = "1.18.1"
slack-sdk = "3.27.0"
dictdiffer = "0.9.0"
python-box = "7.1.1"

[tool.poetry.scripts]
"api:start" = "interfaces.api:start"
"build:rag" = "processors.main:start"
"evaluate" = "ragconfigurationtester.evaluate:start"
"query:llm" = "interfaces.llmdirectquery:query"
"query:rag" = "interfaces.ragquery:query"
"search:embeddings" = "interfaces.embeddingsearch:search"
"slackbot:start" = "interfaces.slackbot:start"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
