[tool.poetry]
name = "deckard"
version = "0.1.0"
description = ""
authors = ["UNB Libraries <libsystems@unb.ca>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
beautifulsoup4 = "4.13.3"
dictdiffer = "0.9.0"
filelock = "3.17.0"
flask = "3.1.0"
html2text = "2024.2.26"
huggingface-hub = "0.29.1"
lancedb = "0.19.0"
langchain = "0.3.19"
langchain-community = "0.3.18"
llama-cpp-python = "0.3.7"
Markdown = "3.7"
mysql-connector-python = "9.2.0"
pandas = "2.2.3"
protobuf = "5.29.3"
psutil = "7.0.0"
python-box = "7.3.2"
pyyaml = "6.0.2"
requests = "2.32.3"
sentence_transformers = "2.7.0"
slack-bolt = "1.22.0"
slack-sdk = "3.34.0"
waitress = "3.0.2"

plain-text-markdown-extention = {git = "git@github.com:kostyachum/python-markdown-plain-text.git"}

[tool.poetry.scripts]
"api:start" = "deckard.interfaces.api:start"
"build:rag" = "deckard.interfaces.ragbuild:start"
"query:llm" = "deckard.interfaces.llmdirectquery:query"
"query:rag" = "deckard.interfaces.rag:rag_query"
"search:embeddings" = "deckard.interfaces.embeddingsearch:search"
"slackbot:start" = "deckard.interfaces.slackbot:start"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
